<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPrinter">

    <EditText
        android:id="@+id/addName"
        android:layout_width="286dp"
        android:layout_height="53dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addSerialNumber"
        android:layout_width="286dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/serialNumber"
        app:layout_constraintEnd_toEndOf="@+id/addName"
        app:layout_constraintStart_toStartOf="@+id/addName"
        app:layout_constraintTop_toBottomOf="@+id/addName" />

    <EditText
        android:id="@+id/addDate"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/addSerialNumber"
        app:layout_constraintStart_toStartOf="@+id/addSerialNumber"
        app:layout_constraintTop_toBottomOf="@+id/addSerialNumber" />

    <EditText
        android:id="@+id/addPhoneNumber"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phonenumber"
        app:layout_constraintEnd_toEndOf="@+id/addDate"
        app:layout_constraintStart_toStartOf="@+id/addDate"
        app:layout_constraintTop_toBottomOf="@+id/addDate" />

    <EditText
        android:id="@+id/addDamageDesc"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/damage"
        app:layout_constraintEnd_toEndOf="@+id/addPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/addPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/addPhoneNumber" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="addClick"
        android:text="ADD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDamageDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>